# coding_test_by_CMake

./: .gitignore  CMakeLists.txt  LGtest.cpp  README.md  bfs.cpp  dfs  dfs.cpp  test  test.c  test.cpp
bfs/: CMakeLists.txt  cabbage.cpp  mindistanceBfs.cpp
dfs/: CMakeLists.txt  dfs.cpp  mindiistance.cpp  targetNumber.cpp
dfs/output/: targetNumber
dp/: 123to4.cpp  CMakeLists.txt  N.cpp
etc/: CMakeLists.txt  makeBigger.cpp
greedy/: CMakeLists.txt  training_clothes.cpp
hesh/: CMakeLists.txt  phoneBook.cpp  poketmon.cpp
innotek/: Parser.h  ReadJson.h  parser.c  readjson.cpp
